# whisperflow_app

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/: config.json
doc/: #TASKS.md#  ARCHITECTURE.md  BLUETOOTH_INPUT_DIAGNOSTIC.md  Native Capture Strategy for Python.md  REQUIREMENTS.md  TASKS.md  USAGE.md  WORK_SUMMARY.md  faster_whisper.md  linux_audio_capture_python.md  nvidia_tuxedo.md  python_style_guide.md
reviews/: task_0_review.md  task_0b_review.md  task_10_review.md  task_11_review.md  task_1_review.md  task_2_review.md  task_3_review.md  task_4_review.md  task_5_review.md  task_6_review.md  task_7_review.md  task_8_review.md  task_9_review.md
scripts/: run_mix.sh  start_archive_browser.sh  start_capture_en.sh  start_capture_es.sh  stop_capture.sh
tests/: test_audio.py  test_cli.py  test_cli_extended.py  test_config.py  test_errors.py  test_live.py  test_live_capture.py  test_logging_utils.py  test_transcribe.py  test_web_dashboard.py
whisperflow/: __main__.py  archive_server.py  audio.py  batch.py  cli.py  clipboard.py  config.py  daemon.py  errors.py  ipc.py  live.py  logging_utils.py  mix.py  model_utils.py  notify.py  output.py  postprocess.py  transcribe.py  tray.py  web_dashboard.py
