[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whisperflow"
version = "0.1.0"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["whisperflow*"]

[project.optional-dependencies]
dev = ["pytest", "coverage"]
tray = ["pystray", "pillow", "pygobject"]
